--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,4 +3,6 @@
  * listed below.
  *
  * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * 
+ * vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're
