--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Admin</h1>
 
 <%= button_to 'Create User', admin_new_path, data:{ turbo:false }, method: :get %>
-<%=
+<%= button_to 'See All Traders', admin_trader_list_path, data:{ turbo:false }, method: :get 
