--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -12,3 +12,6 @@
   <div class="actions">
     <%= f.submit "Resend confirmation instructions" %>
   </div>
+<% end %>
+
+<%= render "devise/shared/links" %>
