--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,3 +1,5 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>Your account has been locked due
+<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+
+<p>Click the link be
