--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -2,4 +2,6 @@
 
 <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
 
-<p>Click the link be
+<p>Click the link below to unlock your account:</p>
+
+<p><%= link_to 'Unlock my account', unlock_url(@r
