--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -13,4 +13,5 @@
   </div>
 
   <div class="field">
-    <%= 
+    <%= f.label :password_confirmation, "Confirm new password" %><br />
+    <%= f.password_fiel
