--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -8,4 +8,7 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div clas
+  <div class="actions">
+    <%= f.submit "Send me reset password instructions" %>
+  </div>
+<% end 
