--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,4 +11,6 @@
   <div class="actions">
     <%= f.submit "Send me reset password instructions" %>
   </div>
-<% end 
+<% end %>
+
+<%= render "devise/shared/links" %>
