This commit was generated by cvs2svn to track changes on a CVS vendor branch.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,4 +5,5 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.ema
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
