Add badges to readme.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,4 +19,8 @@
       <br />
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
-  </
+  </div>
+
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+ 
