--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,4 +23,4 @@
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
- 
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
