--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,4 +27,5 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to c
+    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.password_field :current_password, auto
