--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,4 +38,4 @@
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cance
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, m
