--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,4 +4,5 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= 
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, auto
