Run scan-local.sh on php-zendserver:...

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,4 +10,5 @@
 
   <div class="field">
     <%= f.label :password %>
-    <% if @mini
+    <% if @minimum_password_length %>
+    <em>(<%= @minimum_password_length %> characters minimum)
