--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,4 +23,7 @@
 
   <div class="actions">
   <%= f.submit "Sign up", data: {turbo: false} %>
-  </d
+  </div>
+<% end %>
+
+<%= render "devise/shared/links" %>
