--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -2,4 +2,5 @@
   <div id="error_explanation">
     <h2>
       <%= I18n.t("errors.messages.not_saved",
-  
+                 count: resource.errors.count,
+                 resource: resource.class.mo
