--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -5,4 +5,7 @@
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= 
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="action
