removed debug log

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -6,4 +6,5 @@
 
 <div>
   <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_pat
+  <%= link_to "Back to posts", posts_path %>
+</div>
