--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -12,4 +12,6 @@
     <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
   </div>
 
-  <div class="f
+  <div class="field">
+    <%= f.label :password_confirmation, "Confirm new password" %><br />
+    <%=
