--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -14,4 +14,5 @@
 
   <div class="field">
     <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%=
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+ 
