--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -11,4 +11,6 @@
   <div class="actions">
     <%= f.submit "Send me reset password instructions" %>
   </div>
-<%
+<% end %>
+
+<%= render "users/shared/links" %>
