--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -12,4 +12,5 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div 
+  <div class="field">
+    <%= f.label :password %> <i>(leave blank if you don't want to chan
