--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -27,4 +27,4 @@
   </div>
 
   <div class="field">
-    <%= f.label :curre
+    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
