--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,4 +6,8 @@
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div
+  </div>
+
+  <div class="field">
+    <%= f.label :password %>
+    <% if @minimum_pass
