--- a/app/views/users/shared/_error_messages.html.erb
+++ b/app/views/users/shared/_error_messages.html.erb
@@ -10,4 +10,6 @@
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
-  
+    </ul>
+  </div>
+<% end %>
