--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -20,4 +20,4 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
- 
+    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_a
