--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,3 @@
 <%= @user.id %>
 <%= @user.email %>
-<%= link_to 'Edit', "/admin/trader/#{@user.id}/
+<%= link_to 'Edit', "/admin/trader/#{@user.id}/edit" %>
